--- a/restaurant/src/main/resources/templates/chart/salesStatistics.html
+++ b/restaurant/src/main/resources/templates/chart/salesStatistics.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>销量统计</title>
+    <title>Sales Statistics</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}" href="../../static/layui/css/layui.css"
           media="all"/>
     <style>
@@ -28,11 +28,11 @@
             <div class="layui-card height100">
                 <div class="layui-card-body">
                     <div class="layui-row">
-                        <div class="layui-col-md2" style="height:120px"><span>总营业额</span></div>
+                        <div class="layui-col-md2" style="height:120px"><span>Total Turnover</span></div>
                         <div class="layui-col-md8"
                              style="height:120px;font-size: 26px;line-height:120px;color: #FF5722;text-align: center">
-                            <span id="mustPay"></span><span>元</span></div>
-                        <div class="layui-col-md2" style="height:120px;text-align: right"><span class="day">今日</span>
+                            <span id="mustPay"></span><span>$</span></div>
+                        <div class="layui-col-md2" style="height:120px;text-align: right"><span class="day">TODAY</span>
                         </div>
                     </div>
                 </div>
@@ -42,11 +42,11 @@
             <div class="layui-card height100">
                 <div class="layui-card-body">
                     <div class="layui-row">
-                        <div class="layui-col-md2" style="height:120px"><span>总利润</span></div>
+                        <div class="layui-col-md2" style="height:120px"><span>Total Profit</span></div>
                         <div class="layui-col-md8"
                              style="height:120px;font-size: 26px;line-height:120px;color: #FFB800;text-align: center">
-                            <span id="totalProfit"></span><span>元</span></div>
-                        <div class="layui-col-md2" style="height:120px;text-align: right"><span class="day">今日</span>
+                            <span id="totalProfit"></span><span>$</span></div>
+                        <div class="layui-col-md2" style="height:120px;text-align: right"><span class="day">TODAY</span>
                         </div>
                     </div>
                 </div>
@@ -56,11 +56,11 @@
             <div class="layui-card height100">
                 <div class="layui-card-body">
                     <div class="layui-row">
-                        <div class="layui-col-md2" style="height:120px"><span>订单数</span></div>
+                        <div class="layui-col-md2" style="height:120px"><span>number of order</span></div>
                         <div class="layui-col-md8"
                              style="height:120px;font-size: 26px;line-height:120px;color: #01AAED;text-align: center">
-                            <span id="totalOrder"></span><span>笔</span></div>
-                        <div class="layui-col-md2" style="height:120px;text-align: right"><span class="day">今日</span>
+                            <span id="totalOrder"></span><span>no. of order</span></div>
+                        <div class="layui-col-md2" style="height:120px;text-align: right"><span class="day">TODAY</span>
                         </div>
                     </div>
                 </div>
@@ -75,9 +75,9 @@
                         <div class="layui-col-md2">
                             <div class="layui-inline">
                                 <select name="day" lay-filter="salesStatisticsChartDay" style="border-color: #00FF00">
-                                    <option value="7" selected>近7天</option>
-                                    <option value="14">近15天</option>
-                                    <option value="29">近30天</option>
+                                    <option value="7" selected>recent 7 days</option>
+                                    <option value="14">recent 15 days</option>
+                                    <option value="29">recent 30 days</option>
                                 </select>
                             </div>
                         </div>
