--- a/restaurant/src/main/resources/templates/chart/salesStatistics.html
+++ b/restaurant/src/main/resources/templates/chart/salesStatistics.html
@@ -56,10 +56,10 @@
             <div class="layui-card height100">
                 <div class="layui-card-body">
                     <div class="layui-row">
-                        <div class="layui-col-md2" style="height:120px"><span>number of order</span></div>
+                        <div class="layui-col-md2" style="height:120px"><span>Number of Order</span></div>
                         <div class="layui-col-md8"
                              style="height:120px;font-size: 26px;line-height:120px;color: #01AAED;text-align: center">
-                            <span id="totalOrder"></span><span>no. of order</span></div>
+                            <span id="totalOrder"></span><span>Number of Order</span></div>
                         <div class="layui-col-md2" style="height:120px;text-align: right"><span class="day">TODAY</span>
                         </div>
                     </div>
@@ -75,9 +75,9 @@
                         <div class="layui-col-md2">
                             <div class="layui-inline">
                                 <select name="day" lay-filter="salesStatisticsChartDay" style="border-color: #00FF00">
-                                    <option value="7" selected>recent 7 days</option>
-                                    <option value="14">recent 15 days</option>
-                                    <option value="29">recent 30 days</option>
+                                    <option value="7" selected>Recent 7 days</option>
+                                    <option value="14">Recent 15 days</option>
+                                    <option value="29">Recent 30 days</option>
                                 </select>
                             </div>
                         </div>
