--- a/restaurant/src/main/resources/templates/client/main.html
+++ b/restaurant/src/main/resources/templates/client/main.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8"/>
-    <title>前端点餐界面</title>
+    <title>Order Page</title>
     <meta name="renderer" content="webkit"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport"
@@ -69,13 +69,13 @@
                     </a>
                 </li>
                 <li class="layui-nav-item layui-hide-xs" lay-unselect>
-                    <a href="javascript:;"  style="color:#FFFFFF;"  data-type="test2" id="commit_goods">已提交</a>
+                    <a href="javascript:;"  style="color:#FFFFFF;"  data-type="test2" id="commit_goods">Ordered</a>
                 </li>
                 <li class="layui-nav-item layui-hide-xs" lay-unselect>
-                    <a href="javascript:;" style="color:#FFFFFF;" data-type="test2" id="goods">已选菜</a>
+                    <a href="javascript:;" style="color:#FFFFFF;" data-type="test2" id="goods">Chosen Dish </a>
                 </li>
                 <li class="layui-nav-item layui-hide-xs" lay-unselect>
-                    <a id="logout" style="color:#FFFFFF;font-size: 14px" href="javascript:;" onclick="logout()"/>退出</a>
+                    <a id="logout" style="color:#FFFFFF;font-size: 14px" href="javascript:;" onclick="logout()"/>QUIT</a>
                 </li>
             </ul>
         </div>
@@ -85,21 +85,21 @@
             <div class="layui-side-scroll">
                 <div class="layui-logo"
                      style="text-align: left;background-color:rgba(255,255,255,0);font-size: 20px;padding-left: 20px;border:0px;box-shadow:none;">
-                    <b>桌号 </b><b id="deskCode" th:text="${session.deskCode}"></b>
+                    <b>Table NO. </b><b id="deskCode" th:text="${session.deskCode}"></b>
                 </div>
                 <ul class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu"
                     lay-filter="layadmin-system-side-menu">
                     <li data-name="console" class=" layui-nav-item layui-nav-itemed">
                         <a lay-href="home/console.html" lay-tips="特色菜" lay-direction="2">
                             <i class="layui-icon layui-icon-home"></i>
-                            <cite>特色菜</cite>
+                            <cite>Main Dish</cite>
                         </a>
                         </dl>
                     </li>
                     <li data-name="component" class="layui-nav-item">
                         <a th:attr="lay-href=@{/guest/goodslist.html/-2}" lay-tips="新菜" lay-direction="2">
                             <i class="layui-icon layui-icon-home"></i>
-                            <cite>新菜</cite>
+                            <cite>Salad</cite>
                         </a>
                     </li>
                     <th:block th:each="category:${categoryList}">
