--- a/restaurant/src/main/resources/templates/goods/edit.html
+++ b/restaurant/src/main/resources/templates/goods/edit.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>添加菜品</title>
+    <title>Add Dish to POS</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}" href="../../static/layui/css/layui.css"
           media="all"/>
     <style>
@@ -23,16 +23,16 @@
                 </div>
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
-                        <label class="layui-form-label">菜品名称</label>
+                        <label class="layui-form-label">Name</label>
                         <div class="layui-input-block">
                             <input type="text" th:value="${goods.goodsName}" name="goodsName" id="goodsName"
-                                   lay-verify="required" placeholder="菜名"
+                                   lay-verify="required" placeholder="菜名 Food Name"
                                    autocomplete="off"
                                    class="layui-input">
                         </div>
                     </div>
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
-                        <label class="layui-form-label">菜品类型</label>
+                        <label class="layui-form-label">Type</label>
                         <div class="layui-input-block">
                             <select name="categoryId">
                                 <th:block th:each="goodsCategory:${goodsCategoryList}">
@@ -53,7 +53,7 @@
             <div class="layui-form-item">
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
-                        <label class="layui-form-label">菜品成本</label>
+                        <label class="layui-form-label">Cost</label>
                         <div class="layui-input-block">
                             <input type="text" th:value="${goods.cost}" name="cost"
                                    lay-verify="required|number|positive_number" placeholder="" autocomplete="off"
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
-                        <label class="layui-form-label">菜品价格</label>
+                        <label class="layui-form-label">Prices</label>
                         <div class="layui-input-block">
                             <input type="text" th:value="${goods.price}" name="price"
                                    lay-verify="required|number|positive_number" placeholder="" autocomplete="off"
@@ -73,28 +73,28 @@
             <div class="layui-form-item">
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
-                        <label class="layui-form-label">销售状态</label>
+                        <label class="layui-form-label">Selling Status</label>
                         <div class="layui-input-block">
                             <th:block th:if="${goods.soldState}==0">
-                                <input type="radio" name="soldState" value="0" title="未售完" checked>
-                                <input type="radio" name="soldState" value="1" title="已售完">
+                                <input type="radio" name="soldState" value="0" title="未售完 Available" checked>
+                                <input type="radio" name="soldState" value="1" title="已售完 Sold Out">
                             </th:block>
                             <th:block th:if="${goods.soldState}==1">
-                                <input type="radio" name="soldState" value="0" title="未售完">
-                                <input type="radio" name="soldState" value="1" title="已售完" checked>
+                                <input type="radio" name="soldState" value="0" title="未售完 Available">
+                                <input type="radio" name="soldState" value="1" title="已售完 Sold Out" checked>
                             </th:block>
                         </div>
                     </div>
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
-                        <label class="layui-form-label">上架状态</label>
+                        <label class="layui-form-label">Listing Status</label>
                         <div class="layui-input-block">
                             <th:block th:if="${goods.putawayStatus}==0">
-                                <input type="radio" name="putawayStatus" value="0" title="下架" checked>
-                                <input type="radio" name="putawayStatus" value="1" title="上架">
+                                <input type="radio" name="putawayStatus" value="0" title="下架 Remove on sale" checked>
+                                <input type="radio" name="putawayStatus" value="1" title="上架 Put on sale">
                             </th:block>
                             <th:block th:if="${goods.putawayStatus}==1">
-                                <input type="radio" name="putawayStatus" value="0" title="下架">
-                                <input type="radio" name="putawayStatus" value="1" title="上架" checked>
+                                <input type="radio" name="putawayStatus" value="0" title="下架 Remove on sale">
+                                <input type="radio" name="putawayStatus" value="1" title="上架 Put on sale" checked>
                             </th:block>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
             <div class="layui-form-item">
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
-                        <label class="layui-form-label">库存量</label>
+                        <label class="layui-form-label">Inventory</label>
                         <div class="layui-input-block">
                             <input type="text" th:value="${goods.storeCount}" name="storeCount"
                                    lay-verify="required|int_number" placeholder=""
@@ -111,23 +111,23 @@
                         </div>
                     </div>
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
-                        <label class="layui-form-label">类型状态</label>
+                        <label class="layui-form-label">Type Status</label>
                         <div class="layui-input-block">
                             <select name="typeState">
                                 <th:block th:if="${goods.typeState}==1">
-                                    <option value="1" selected>普通菜</option>
-                                    <option value="2">新菜</option>
-                                    <option value="3">特色菜</option>
+                                    <option value="1" selected>普通菜 Main Dishes</option>
+                                    <option value="2">新菜 Salad</option>
+                                    <option value="3">特色菜 Dessert</option>
                                 </th:block>
                                 <th:block th:if="${goods.typeState}==2">
-                                    <option value="1">普通菜</option>
-                                    <option value="2" selected>新菜</option>
-                                    <option value="3">特色菜</option>
+                                    <option value="1">普通菜 Main Dishes</option>
+                                    <option value="2" selected>新菜 Salad</option>
+                                    <option value="3">特色菜 Dessert</option>
                                 </th:block>
                                 <th:block th:if="${goods.typeState}==3">
-                                    <option value="1">普通菜</option>
-                                    <option value="2">新菜</option>
-                                    <option value="3" selected>特色菜</option>
+                                    <option value="1">普通菜 Main Dishes</option>
+                                    <option value="2">新菜 Salad</option>
+                                    <option value="3" selected>特色菜 Dessert</option>
                                 </th:block>
                             </select>
                         </div>
@@ -138,18 +138,18 @@
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
                         <div class="layui-form-text">
-                            <label class="layui-form-label">菜品描述</label>
+                            <label class="layui-form-label">Food Description</label>
                             <div class="layui-input-block">
-                        <textarea th:text="${goods.description}" name="description" placeholder="请输入内容"
+                        <textarea th:text="${goods.description}" name="description" placeholder="Please type it on here!"
                                   lay-verify="required"
                                   class="layui-textarea"></textarea>
                             </div>
                         </div>
                     </div>
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md6">
-                        <label class="layui-form-label">菜品照片</label>
+                        <label class="layui-form-label">Food Photo</label>
                         <!--上传按钮-->
-                        <button type="button" class="layui-btn" id="upload1">上传图片</button>
+                        <button type="button" class="layui-btn" id="upload1">Upload</button>
                         <!--隐藏的input-->
                         <input type="hidden" id="img_url" name="imgUrl"/>
                         <!--预览区域-->
